--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -440,7 +440,7 @@ static double piloDemoMonitorOut;         /* Output parameter */
 \begin{center}\begin{cartouche}\small\begin{verbatim}
   int ...ReplyRcv(CLIENT\_ID clientId,
                   int rqstId, int block,
-                  [OUT *out], int *activity, int *bilan);
+                  [OUT *out], int *activity, int *report);
 \end{verbatim}\end{cartouche}\end{center}
 
 This function takes two new arguments:
