rough draft of a chapter related to genom installation/configuration

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -73,6 +73,10 @@ LAAS-CNRS\\
 \markboth{\MakeUppercase{GenoM? What for?}}{}
 \input{genom-intro}
 
+\chapter{Installation and configuration}
+\label{cha|configuration}
+\input{genom-configuration}
+
 \chapter[The {\tt demo} module, an overview of GenoM]{The {\tt demo}
 module, an overview of \GenoM}
 \label{cha|session}
