--- a/doc/user_guide/tex/genom-configuration.tex
+++ b/doc/user_guide/tex/genom-configuration.tex
@@ -133,7 +133,7 @@ so on will be installed. Typically you can set this variable to {\tt
 /usr/local/openrobots}.
 
 \begin{cartouche}
-\begin{verbatime}
+\begin{verbatim}
 tar xfvz pocolibs-XYZ.tar.gz
 cd pocolibs-XYZ
 ./autogen.sh
@@ -142,7 +142,7 @@ cd build
 ../configure --prefix=$PREFIX
 make
 make install
-\end{verbatime}
+\end{verbatim}
 \end{cartouche}
 
 The command {\tt ./autogen.sh} is not always necessary. If there is
