--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 $LAAS$
 
+ 35. If the H2DEV_DIR environment variable is set, we save the PID
+     files in here. This envvar is used by pocolibs to set its device file
  34. New option '-a' to generate module api only (not the module server)
  33. Remove use of separate *Proto.h for function prototypes.
  32. Rename TCLSERVMODULEPATH environment variable to TCLSERV_MODULE_PATH
