--- a/doc/user_guide/tex/genom-generation.tex
+++ b/doc/user_guide/tex/genom-generation.tex
@@ -153,7 +153,7 @@ contains the definitions of several constants that characterize the module
 access the {\em IDS} ({\em SDI\_F} and {\em SDI\_C}).
 
 The file  {\tt demoError.h} contains the  definitions of the  error codes
-(reports declared in the {\tt fail\_msg} field) of this module.
+(reports declared in the {\tt fail\_reports} field) of this module.
 
 The file {\tt  demoType.h} defines the actual {\em  IDS} structure. It is
 not necessarily the same as  in the  {\tt .gen}  file, especially if  the
