For now remove old figures essay*

--- a/doc/slides/genom.tex
+++ b/doc/slides/genom.tex
@@ -998,7 +998,7 @@ started.
 %----------------------------------------------------------------------
 \begin{tran}{The test program \texttt{demoTest} }
 
-\figw{./figures/essay1}{11cm}
+%%\figw{./figures/essay1}{11cm}
 
 \end{tran}
 
@@ -1007,7 +1007,7 @@ started.
 
 \vspace{2cm}
 
-\figw{./figures/essay2}{8cm}
+%%\figw{./figures/essay2}{8cm}
 
 \end{tran}
 
